made download border thinner, fixed spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -672,9 +672,9 @@ min-height:200px;
     border-radius: 5px;
 }
 .downloadButton {
-	height: 52px;
-    width: 142px;
-    margin: 4px;
+	height: 55px;
+    width: 145px;
+    margin: 2.5px;
     padding: 5px;
 	border-radius: 5px;
 	border: solid #F8F8F8;
